# ROBIT_Dynamixel_Control_With_ROS2

./: README.md
dxl_controller/: CMakeLists.txt  package.xml
dxl_controller/include/dxl_controller/: serial_process.hpp
dxl_controller/src/: main.cpp  serial_process.cpp  test.cpp
install/: local_setup.sh  setup.sh
install/dxl_controller/lib/dxl_controller/: dxl_controller
install/dxl_controller/share/dxl_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dxl_controller/share/dxl_controller/cmake/: dxl_controllerConfig.cmake
log/: latest_build
